Fix some layout issues in IE 11

--- a/src/app/projects/components/editorPane/editorPane.less
+++ b/src/app/projects/components/editorPane/editorPane.less
@@ -9,6 +9,7 @@ editor-pane {
 
 .content-editor-container {
   overflow: auto;
+  overflow-x: hidden;
   position: relative;
   padding-left: 15px;
   padding-right: 5px;
