--- a/src/app/projects/components/tagsInput/tagsInput.less
+++ b/src/app/projects/components/tagsInput/tagsInput.less
@@ -23,7 +23,8 @@
   }
 
   tag {
-    line-height: initial;
+    line-height: 2rem;
+    display: block;
   }
 }
 
